# claude-agent-sdk-stub-projects

./: .gitignore  README.md
ai-dev-kit/databricks-builder-app/: README.md  app.yaml  pyproject.toml
ai-dev-kit/databricks-builder-app/alembic/: env.py
ai-dev-kit/databricks-builder-app/client/: index.html  package-lock.json  package.json  vite.config.ts
ai-dev-kit/databricks-builder-app/client/src/pages/: HomePage.tsx
ai-dev-kit/databricks-builder-app/server/db/: __init__.py  database.py  models.py
ai-dev-kit/databricks-builder-app/server/routers/: config.py
ai-dev-kit/databricks-builder-app/server/services/: backup_manager.py  storage.py  user.py
ai-dev-kit/databricks-mcp-server/: run_server.py  setup.sh
ai-dev-kit/databricks-tools-core/databricks_tools_core/: auth.py
claude-agent-sdk-tutorial/: .env.example  .gitignore  app.py  app.yaml  pyproject.toml  requirements.txt  test.py
claude-agent-sdk-tutorial/scripts/: interactive_chat.py  mcp_with_permission.py  query.py  sdk-client.py  sdk_demo.py
data/: store_sales_monthly.csv
jobs/: bjs_executive_analysis.py  bjs_generate_charts.py
scripts/: create_full_pipeline_job.py  executive_analysis.py  generate_bjs_data.py  generate_charts.py  generate_html_report.py  get_table_metadata.py  rerun_job.py
workflows-with-claude-agent-sdk/data/: customer_golden_view.csv
workflows-with-claude-agent-sdk/jobs/: bjs_ai_insights.py  bjs_data_pipeline.py  bjs_generate_report.py
workflows-with-claude-agent-sdk/scripts/: create_databricks_job.py  generate_and_upload_bjs_data.py  generate_pdf_report.py
(+2 files in other folders)
